Fixing alignment of the comment editor when we have a list of comments

--- a/translate/src/modules/comments/components/CommentsList.css
+++ b/translate/src/modules/comments/components/CommentsList.css
@@ -3,6 +3,10 @@
   padding: 8px 0;
 }
 
+.comments-list .comment.is-editing .info {
+  margin-left: 44px;
+}
+
 .comments-list .pinned-comments > * {
   padding: 0 8px;
 }
